--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,6 +1,6 @@
 .header {
   position: relative;
-  height: var(--layout-site-header-height);
+  height: var(--header-height);
   width: 100%;
   contain: style size; // Improves performance
 
@@ -15,7 +15,6 @@
     top: 50%;
     left: 50%;
     transform: translate3d(-50%, -50%, 0);
-    filter: var(--layout-site-logo-filter);
     content-visibility: auto;
   }
 
@@ -24,8 +23,8 @@
   }
 
   .custom-logo {
-    height: var(--layout-site-logo-height);
-    max-height: calc(var(--layout-site-header-height) - 2rem);
+    height: var(--header-logo-height);
+    max-height: calc(var(--header-height) - 2rem);
     width: fit-content;
     object-fit: contain;
   }
@@ -62,16 +61,15 @@
   top: -6px;
   left: 0;
   right: 0;
-  height: calc(var(--layout-header-background-height) + 6px); // Offset wrapper margin
+  height: calc(var(--header-image-height) + 6px); // Offset wrapper margin
   width: 100%;
-  filter: var(--layout-header-background-filter);
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
   content-visibility: auto;
   contain: content; // Improve performance
 
   &._shadow {
-    filter: var(--layout-header-background-drop-shadow);
+    filter: var(--header-image-drop-shadow);
   }
 
   &._fading-bottom {
