--- a/src/scss/common/_fullscreen.scss
+++ b/src/scss/common/_fullscreen.scss
@@ -1,5 +1,5 @@
 :is(:fullscreen, :-webkit-full-screen) {
-  --layout-main-inset-top: 0;
+  --page-inset-top: 0;
 
   .background-texture {
     background: {
