--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -1,11 +1,3 @@
-:root:not(.minimal, .no-background-textures) {
-  .card {
-    .card__body {
-      background-image: var(--layout-background-texture-cards);
-    }
-  }
-}
-
 :root.minimal {
   .card {
     &__link-list-item {
@@ -94,7 +86,7 @@
         inset: 0;
         display: grid;
         place-content: center;
-        background: var(--e-2);
+        background: var(--card-bg-color);
         opacity: 0.85;
       }
     }
@@ -111,7 +103,7 @@
       line-height: 1;
       text-transform: uppercase;
       font-weight: var(--font-weight-heading);
-      filter: drop-shadow(0 0 8px var(--e-2)) drop-shadow(0 0 6px var(--e-2)) drop-shadow(0 0 2px var(--e-2));
+      filter: drop-shadow(0 0 8px var(--card-bg-color)) drop-shadow(0 0 6px var(--card-bg-color)) drop-shadow(0 0 2px var(--card-bg-color));
     }
   }
 
@@ -175,7 +167,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: var(--e-2);
+    background-color: var(--card-bg-color);
     font-family: var(--ff-card-body);
     padding: var(--this-padding);
     border-radius: var(--layout-border-radius-small);
@@ -184,7 +176,7 @@
   }
 
   &__empty {
-   color: var(--fg-800);
+   color: var(--fg-800); // TODO
    text-align: center;
   }
 
@@ -255,9 +247,9 @@
 
   &__label {
     cursor: default;
-    background: var(--card-label-type-background);
-    color: var(--card-label-type-text);
-    font: var(--card-type-font-weight) 62.5%/1 var(--ff-base);
+    background: var(--card-label-background);
+    color: var(--card-label-color);
+    font: var(--card-label-font-weight) 62.5%/1 var(--ff-base);
     text-shadow: none;
     text-transform: uppercase;
     padding: .35em .55em;
@@ -265,7 +257,7 @@
   }
 
   &__sticky-icon {
-    color: var(--fg-700);
+    color: var(--fg-700); // TODO
     font-size: 75%;
     line-height: 1;
     opacity: .375;
@@ -279,7 +271,7 @@
     justify-content: flex-end;
     gap: .625em;
     flex-shrink: 0;
-    color: var(--fg-700);
+    color: var(--fg-700); // TODO
     line-height: 1;
     text-align: right;
     padding: .625em .625em 0 0;
@@ -303,7 +295,7 @@
   &__image {
     --focus-offset: 2px;
     position: relative;
-    background: var(--placeholder-background);
+    background: var(--card-image-placeholder, var(--placeholder-background));
     border-radius: var(--layout-border-radius-small);
     overflow: hidden;
 
@@ -331,7 +323,7 @@
     text-align: center;
 
     .text-icon {
-      color: var(--fg-600); // Overrides hover
+      color: var(--fg-600); // Overrides hover // TODO
     }
   }
 
@@ -392,7 +384,7 @@
       display: flex;
       justify-content: space-between;
       gap: 0 1.125em;
-      background: var(--content-list-item-background);
+      background: var(--card-content-li-background);
       padding: 0.175em 0.35em 0.175em 0;
       border-radius: var(--layout-border-radius-small);
       min-width: 0; // Fix whitespace nowrap issue
@@ -454,7 +446,7 @@
         position: absolute;
         top: 5px;
         right: 0;
-        background: linear-gradient(270deg, var(--e-2) 0%, transparent 100%);
+        background: linear-gradient(270deg, var(--card-bg-color) 0%, transparent 100%);
         height: 85%;
         width: 8px;
       }
@@ -488,7 +480,7 @@
     margin-top: var(--card-footer-margin-top, 1em);
 
     &-box {
-      background: var(--infobox-background);
+      background-color: var(--card-footer-bg-color);
     }
 
     .card-footer-icon {
@@ -539,7 +531,7 @@
     content-visibility: hidden; // Improve performance
     flex-direction: column;
     justify-content: space-between;
-    background: var(--infobox-background);
+    background: var(--card-overlay-bg-color);
     font-size: var(--card-overlay-font-size, clamp(12px, 2.5cqw, 14px));
     line-height: 1.33;
     border-radius: var(--layout-border-radius-small);
@@ -555,7 +547,7 @@
 
     .card__footer {
       gap: 0;
-      border-top: 3px solid var(--e-2);
+      border-top: 3px solid var(--card-bg-color);
       margin-top: 0;
 
       > .card__footer-box {
@@ -563,7 +555,7 @@
       }
 
       .card__footer-box._right {
-        border-left: 3px solid var(--e-2);
+        border-left: 3px solid var(--card-bg-color);
       }
     }
 
@@ -688,7 +680,7 @@
       bottom: 0;
       display: block;
       color: transparent;
-      background-color: var(--e-2);
+      background-color: var(--card-bg-color);
       padding-left: 1px;
     }
 
