--- a/src/scss/_profile.scss
+++ b/src/scss/_profile.scss
@@ -122,7 +122,7 @@
       text-align: center;
       line-height: 1.1;
       padding: 1rem;
-      border: 1px dashed var(--button-secondary-text);
+      border: 1px dashed var(--button-secondary-color);
       border-radius: var(--layout-border-radius-small);
       height: 5rem;
       width: 5rem;
@@ -140,8 +140,8 @@
       &._disconnected {
         &:hover {
           background: var(--button-secondary-background-hover);
-          color: var(--button-secondary-text-hover);
-          border-color: var(--button-secondary-text-hover);
+          color: var(--button-secondary-color-hover);
+          border-color: var(--button-secondary-color-hover);
         }
       }
 
