--- a/src/scss/customize/page-style-battered.scss
+++ b/src/scss/customize/page-style-battered.scss
@@ -2,7 +2,7 @@
 @import '../common/_mixins';
 
 :root.page-style-polygon-battered:not(.minimal) .main__background {
-  filter: var(--layout-main-drop-shadow);
+  filter: var(--page-drop-shadow);
 
   &::before {
     clip-path: var(--polygon-battered-half);
