--- a/src/scss/customize/page-style-chamfered.scss
+++ b/src/scss/customize/page-style-chamfered.scss
@@ -2,7 +2,7 @@
 @import '../common/_mixins';
 
 :root.page-style-polygon-chamfered:not(.minimal) .main__background {
-  filter: var(--layout-main-drop-shadow);
+  filter: var(--page-drop-shadow);
 
   &::before {
     --m: #{get_clamp(6, 12, 320, 768)};
