--- a/src/scss/customize/page-style-layered-steps-a.scss
+++ b/src/scss/customize/page-style-layered-steps-a.scss
@@ -2,7 +2,7 @@
 @import '../common/_mixins';
 
 :root.page-style-mask-image-layered-steps-a:not(.minimal) .main__background {
-  filter: var(--layout-main-drop-shadow);
+  filter: var(--page-drop-shadow);
 
   &::before {
     --mp: top left, top #{get_clamp(15, 23, 375, 768)} left 0;
