--- a/src/scss/customize/page-style-ringbook.scss
+++ b/src/scss/customize/page-style-ringbook.scss
@@ -2,7 +2,7 @@
 @import '../common/_mixins';
 
 :root.page-style-mask-image-ringbook:not(.minimal) .main__background {
-  filter: var(--layout-main-drop-shadow);
+  filter: var(--page-drop-shadow);
 
   &::before {
     @include bp(375px) {
